--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,20 +1,3 @@
-<!--
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>메인 페이지</title>
-</head>
-<body>
-<nav>
-    <a href="/company/">company info</a>
-    <a href="/mysite/">product</a>
-</nav>
-
-<h1>메인 페이지입니다.</h1>
-</body>
-</html>
--->
 <!DOCTYPE html>
 {% load static %}
 <html lang="ko">
@@ -31,23 +14,18 @@
         <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'mainpage.css' %}">
         <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
-        <style>
-
-
-
-        </style>
     </head>
     <body>
         <!-- 네비게이션바 -->
         <nav class="navbar navbar-expand-lg"> <!-- navbar-dark bg-dark-->
             <div class="container px-5 py-3">
-                <a class="navbar-brand" href="#!">YOONHADA</a>
+                <a class="navbar-brand" href="../">YOONHADA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="/about/">BRAND</a></li>
                         <li class="nav-item"><a class="nav-link" href="/product/">PRODUCT</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contact/">CONTACT</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">CONTACT</a></li>
                     </ul>
                 </div>
             </div>
@@ -55,16 +33,6 @@
 
         <!-- 페이지 내용 -->
         <div class="container px-4 px-lg-5">
-
-            <!-- 슬라이드 -->
-            <div class="slide">
-              <div class="slide-container">
-                    {% for slides in slides_list %}
-                        <div class="slide-item"><img class="slide-image" src="{{ slides.image.url }}"  alt="..." /></div>
-                     {% endfor %}
-              </div>
-            </div>
-            <div class="pagination"></div>
 
         <!--신상품-->
         <br>
