--- a/static/mainpage.css
+++ b/static/mainpage.css
@@ -31,6 +31,7 @@ margin: 30px 0px;
   justify-content: center;
 
   .slide-image {
+      padding-top: 50px;
       width: 100%;
   }
 
@@ -103,6 +104,7 @@ margin: 30px 0px;
 
 /* 푸터 */
 .footer{
+
     background-color: #D3D3D3;
     .footer-container {
         display: flex;
