--- a/templates/pages/brand_about.html
+++ b/templates/pages/brand_about.html
@@ -29,21 +29,16 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'about.css' %}">
+        <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
         <style>
-            .navbar-brand {
-                font-size: 40px;
 
-            }
-             .navbar-nav .nav-link {
-                font-size: 25px;
-                margin-right: 50px;
-            }
 
 
         </style>
     </head>
     <body>
-        <!-- Responsive navbar-->
+        <!-- 네비게이션바 -->
         <nav class="navbar navbar-expand-lg"> <!-- navbar-dark bg-dark-->
             <div class="container px-5 py-3">
                 <a class="navbar-brand" href="../">YOONHADA</a>
@@ -57,55 +52,51 @@
                 </div>
             </div>
         </nav>
-        <!-- Page Content-->
+
+        <!-- 본문 -->
         <div class="container px-4 px-lg-5">
-            <!-- Heading Row-->
-            <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
-                <div class="col-lg-5">
-                    <h1 class="font-weight-light">Business Name or Tagline</h1>
-                    <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-                    <a class="btn btn-primary" href="#!">Call to Action!</a>
-                </div>
+            <br>
+            <p>About 윤하다</p>
+            <hr>
+            <div class="introduce">
+            <h3 class="title">STORY</h3>
+            <div class="img">
+                <img src="https://img.freepik.com/free-photo/top-view-cream-container-with-plant_23-2148899432.jpg?size=626&ext=jpg&ga=GA1.1.706422718.1694417171&semt=ais">
             </div>
-            <!-- Call to Action-->
-            <div class="card text-white bg-secondary my-5 py-4 text-center">
-                <div class="card-body"><p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p></div>
+            <div class="comment">
+            <p class="values">"자연과 아름다움의 조화"</p>
+            <p>윤하다는 자연과 아름다움을 존중하는 비건 브랜드로서 화장품을 통해</p>
+            <p>아름다움을 창조하면서도 환경을 보호하고 동물에게 미치는 영향을 고려합니다.</p>
+            <p>윤하다의 제품은 천연 성분으로 동물 실험 및 동물성 성분을 사용하지 않습니다.</p>
+            <p>윤하다와 함께라면 아름다움을 추구하면서도 지구를 보호할 수 있습니다.</p>
+            <p>우리의 제품을 통해 자연과 아름다움의 조화를 느껴보세요.</p>
             </div>
-            <!-- Content Row-->
-            <div class="row gx-4 gx-lg-5">
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card One</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card Two</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card Three</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
             </div>
+
         </div>
+
+
+
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+        <footer class="footer py-5 ">
+            <div class="container px-4 px-lg-5">
+                <div class="footer-container">
+                    <div class="sub-container">
+                      <p class="footer-subtitle">C/S</p>
+                      <p class="phone">010-1234-5678</p>
+                      <p>AM 10:00 - PM 05:00 (주말 및 공휴일 휴무)</p>
+                    </div>
+                    <div class="sub-container">
+                      <p class="footer-subtitle">COMPANY</p>
+                      <div class="footer-company">
+                          <p>상호: 윤하다 &nbsp;&nbsp; 대표: 박채윤</p>
+                          <p>사업자등록번호: 809-81-01574</p>
+                          <p>이메일: yoonhada@gmail.com</p>
+                          <address>주소: 서울특별시 용산구 한강대로 372</address>
+                      </div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
