--- a/templates/pages/product.html
+++ b/templates/pages/product.html
@@ -12,7 +12,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'mainpage.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'product.css' %}">
         <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
     </head>
     <body>
@@ -34,104 +34,123 @@
         <!-- 페이지 내용 -->
         <div class="container px-4 px-lg-5">
 
-        <!--신상품-->
-        <br>
-        <p>NEW</p>
-        <hr>
+            <!-- 카테고리 메뉴 -->
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" id="category1-tab" data-toggle="tab" href="#category1">전체상품</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="category2-tab" data-toggle="tab" href="#category2">토너 / 미스트</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="category3-tab" data-toggle="tab" href="#category3">에센스 / 앰플</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="category4-tab" data-toggle="tab" href="#category4">로션 / 크림</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="category5-tab" data-toggle="tab" href="#category5">클렌징 / 스크럼</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="category6-tab" data-toggle="tab" href="#category6">선케어 / 팩</a>
+                </li>
+            </ul>
+            <br>
 
-        <div class="product-container">
-                <a class="product-item">
-                    <img src="https://dummyimage.com/300x300"/>
-                    <div>
-                        <h5 class="product-name">PRODUCT이름 들어갈 곳</h5>
-                        <p class="product-detail">comment설명 들어갈 곳</p>
+            <!-- 카테고리별 내용 -->
+            <div class="tab-content mt-3">
+                <div class="tab-pane fade show active" id="category1">
+                    <div class="product-container">
+                        {% for good in good_list %}
+                        <a class="product-item">
+                            <img src="{{ good.image.url }}"/>
+                            <div>
+                                <h5 class="product-name">{{ good.name }}</h5>
+                                <p class="product-detail">{{ good.price }}원</p>
+                            </div>
+                        </a>
+                        {% endfor %}
                     </div>
-                </a>
-                <a class="product-item">
-                    <img src="https://dummyimage.com/300x300"/>
-                     <div>
-                        <h5 class="product-name">PRODUCT이름 들어갈 곳</h5>
-                        <p class="product-detail">comment설명 들어갈 곳</p>
+                </div>
+                <div class="tab-pane fade" id="category2">
+                    <div class="product-container">
+                        {% for good in good_list %}
+                        {% if good.category == "토너/미스트" %}
+                        <a class="product-item">
+                            <img src="{{ good.image.url }}"/>
+                            <div>
+                                <h5 class="product-name">{{ good.name }}</h5>
+                                <p class="product-detail">{{ good.price }}원</p>
+                            </div>
+                        </a>
+                        {% endif %}
+                        {% endfor %}
                     </div>
-                </a>
-                <a class="product-item">
-                    <img src="https://dummyimage.com/300x300"/>
-                     <div>
-                        <h5 class="product-name">PRODUCT이름 들어갈 곳</h5>
-                        <p class="product-detail">comment설명 들어갈 곳</p>
+                </div>
+                <div class="tab-pane fade" id="category3">
+                    <div class="product-container">
+                        {% for good in good_list %}
+                        {% if good.category == "에센스/앰플" %}
+                        <a class="product-item">
+                            <img src="{{ good.image.url }}"/>
+                            <div>
+                                <h5 class="product-name">{{ good.name }}</h5>
+                                <p class="product-detail">{{ good.price }}원</p>
+                            </div>
+                        </a>
+                        {% endif %}
+                        {% endfor %}
                     </div>
-                </a>
-                <a class="product-item">
-                    <img src="https://dummyimage.com/300x300"/>
-                     <div>
-                        <h5 class="product-name">PRODUCT이름 들어갈 곳</h5>
-                        <p class="product-detail">comment설명 들어갈 곳</p>
+                </div>
+                <div class="tab-pane fade" id="category4">
+                    <div class="product-container">
+                        {% for good in good_list %}
+                        {% if good.category == "로션/크림" %}
+                        <a class="product-item">
+                            <img src="{{ good.image.url }}"/>
+                            <div>
+                                <h5 class="product-name">{{ good.name }}</h5>
+                                <p class="product-detail">{{ good.price }}원</p>
+                            </div>
+                        </a>
+                        {% endif %}
+                        {% endfor %}
                     </div>
-                </a>
-            <a class="product-item">
-                    <img src="https://dummyimage.com/300x300"/>
-                     <div>
-                        <h5 class="product-name">PRODUCT이름 들어갈 곳</h5>
-                        <p class="product-detail">comment설명 들어갈 곳</p>
+                </div>
+                <div class="tab-pane fade" id="category5">
+                    <div class="product-container">
+                        {% for good in good_list %}
+                        {% if good.category == "클렌징/스크럼" %}
+                        <a class="product-item">
+                            <img src="{{ good.image.url }}"/>
+                            <div>
+                                <h5 class="product-name">{{ good.name }}</h5>
+                                <p class="product-detail">{{ good.price }}원</p>
+                            </div>
+                        </a>
+                        {% endif %}
+                        {% endfor %}
                     </div>
-                </a>
-            <a class="product-item">
-                    <img src="https://dummyimage.com/300x300"/>
-                     <div>
-                        <h5 class="product-name">PRODUCT이름 들어갈 곳</h5>
-                        <p class="product-detail">comment설명 들어갈 곳</p>
+                </div>
+                <div class="tab-pane fade" id="category6">
+                    <div class="product-container">
+                        {% for good in good_list %}
+                        {% if good.category == "선케어/팩" %}
+                        <a class="product-item">
+                            <img src="{{ good.image.url }}"/>
+                            <div>
+                                <h5 class="product-name">{{ good.name }}</h5>
+                                <p class="product-detail">{{ good.price }}원</p>
+                            </div>
+                        </a>
+                        {% endif %}
+                        {% endfor %}
                     </div>
-                </a>
+                </div>
+            </div>
         </div>
 
-
-
-
-            <!-- Heading Row-->
-            <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
-                <div class="col-lg-5">
-                    <h1 class="font-weight-light">Business Name or Tagline</h1>
-                    <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-                    <a class="btn btn-primary" href="#!">Call to Action!</a>
-                </div>
-            </div>
-            <!-- Call to Action-->
-            <div class="card text-white bg-secondary my-5 py-4 text-center">
-                <div class="card-body"><p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p></div>
-            </div>
-            <!-- Content Row-->
-            <div class="row gx-4 gx-lg-5">
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card One</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card Two</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card Three</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer-->
+        <!-- 푸터 -->
         <footer class="footer py-5 ">
             <div class="container px-4 px-lg-5">
                 <div class="footer-container">
@@ -155,50 +174,8 @@
     </body>
 </html>
 
-<script type="text/javascript">
-    let emblaNode = document.querySelector(".slide");
-    let options = { loop: true };
 
-    let embla = EmblaCarousel(emblaNode, options);
-
-    // 페이지네이션 엘리먼트를 선택합니다.
-    let pagination = document.querySelector(".pagination");
-
-    // 슬라이드 아이템 수 만큼 페이지네이션 도트 버튼을 생성합니다.
-    for (let i = 0; i < embla.slideNodes().length; i++) {
-      let dot = document.createElement("div");
-      dot.classList.add("pagination-dot");
-
-      // 페이지 버튼에 클릭 이벤트를 추가하여 해당 인덱스의 슬라이드를 보여줍니다.
-      dot.addEventListener("click", function () {
-        embla.scrollTo(i);
-      });
-
-      // 페이지네이션 엘리먼트에 도트를 추가합니다.
-      pagination.appendChild(dot);
-    }
-
-    // 슬라이드 변경 시 페이지네이션 업데이트를 위한 이벤트 리스너를 추가합니다.
-    embla.on("select", () => {
-      // 현재 활성화된 슬라이드의 인덱스를 가져옵니다.
-      const selectedSlideIndex = embla.selectedScrollSnap();
-
-      // 모든 페이지네이션 도트의 활성화 클래스를 제거합니다.
-      pagination.querySelectorAll(".pagination-dot").forEach((dot, index) => {
-        dot.classList.remove("active");
-
-        // 현재 슬라이드와 일치하는 도트에 활성화 클래스를 추가합니다.
-        if (index === selectedSlideIndex) {
-          dot.classList.add("active");
-        }
-      });
-    });
-
-    // 3초마다 자동으로 슬라이드를 넘기는 함수를 정의합니다.
-    function autoScroll() {
-      embla.scrollNext(); // 다음 슬라이드로 이동
-    }
-
-    // 3초마다 autoScroll 함수를 호출하여 자동 스크롤을 시작합니다.
-    setInterval(autoScroll, 3000); // 3초(3000밀리초)마다 실행
-  </script>
+<!-- 부트스트랩 및 jQuery 및 Popper.js 스크립트 링크 -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
