헤더/푸터 분리 및 상세페이지 추가

--- a/templates/mysite/content_list.html
+++ b/templates/mysite/content_list.html
@@ -9,8 +9,8 @@
 {% if content_list %}
     {% for content in content_list %}
         <hr/>
-        <h3><a href="/mysite/{{ content.id }}/">{{ content.title }}</a></h3>
-        <h5>{{ content.content}}</h5>
+        <h3><a href="{% url 'detail' content.id %}">{{ content.title }}</a></h3>
+        <h5>{{ content.content | truncatewords:30}}</h5>
     {% endfor %}
 {% else %}
     <p>content 가 없습니다.</p>
