--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
 {% load static %}
 <html lang="ko">
     <head>
@@ -16,20 +18,6 @@
         <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
     </head>
     <body>
-        <!-- 네비게이션바 -->
-        <nav class="navbar navbar-expand-lg"> <!-- navbar-dark bg-dark-->
-            <div class="container px-5 py-3">
-                <a class="navbar-brand" href="../">YOONHADA</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="/about/">BRAND</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/product/">PRODUCT</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">CONTACT</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
 
         <!-- 페이지 내용 -->
         <div class="container mt-5">
@@ -63,27 +51,6 @@
     </div>
 
 
-        <!-- Footer-->
-        <footer class="footer py-5 ">
-            <div class="container px-4 px-lg-5">
-                <div class="footer-container">
-                    <div class="sub-container">
-                      <p class="footer-subtitle">C/S</p>
-                      <p class="phone">010-1234-5678</p>
-                      <p>AM 10:00 - PM 05:00 (주말 및 공휴일 휴무)</p>
-                    </div>
-                    <div class="sub-container">
-                      <p class="footer-subtitle">COMPANY</p>
-                      <div class="footer-company">
-                          <p>상호: 윤하다 &nbsp;&nbsp; 대표: 박채윤</p>
-                          <p>사업자등록번호: xxx-xx-xxxxx</p>
-                          <p>이메일: yoonhada@gmail.com</p>
-                          <address>주소: 서울특별시 00구 00대로 000</address>
-                      </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
     </body>
 </html>
 
@@ -91,3 +58,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+{% endblock %}
