--- a/templates/pages/notice_detail.html
+++ b/templates/pages/notice_detail.html
@@ -8,13 +8,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>제품 상세페이지</title>
+        <title>공지사항 상세페이지</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'product.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'contact.css' %}">
         <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
     </head>
     <body>
@@ -23,10 +23,10 @@
         <div class="container px-4 px-lg-5">
 
             <br>
-            <img src="{{ good_list.image.url }}"/>
             <div>
-                <h5 class="product-name">{{ good_list.name }}</h5>
-                <p class="product-detail">{{ good_list.price }}원</p>
+                <h5 class="post-title">{{ post_list.title }}</h5>
+                <p class="post-content">{{ post_list.content }}</p>
+                <p class="post-pubdate">{{ post_list.pub_date }}</p>
             </div>
 
 
