--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>메인 페이지</title>
+        <title>공지사항</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -18,7 +18,6 @@
         <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
     </head>
     <body>
-
         <!-- 페이지 내용 -->
         <div class="container mt-5">
             <h3 class="notice">NOTICE</h3>
@@ -46,17 +45,15 @@
                     {% endfor %}
                 </tbody>
             </table>
-
-
+            <br>
     </div>
 
 
     </body>
 </html>
-
+{% endblock %}
 <!-- 부트스트랩 JS 및 jQuery, Popper.js 링크 -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-{% endblock %}
