--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,17 +2,13 @@
 {% load static %}
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>Footer</title>
-
+    <meta charset="UTF-8">
+    <title>Footer</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'mainpage.css' %}">
-        
-
-  <style>
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+    <style>
     .footer{
       background-color: #D3D3D3;
       .footer-container {
@@ -38,7 +34,7 @@
           line-height: 10px;
       }
     }
-  </style>
+    </style>
 </head>
 <body>
   <footer class="footer py-5 ">
@@ -46,16 +42,16 @@
           <div class="footer-container">
               <div class="sub-container">
                 <p class="footer-subtitle">C/S</p>
-                <p class="phone">010-1234-5678</p>
+                <p class="phone">1688-9407</p>
                 <p>AM 10:00 - PM 05:00 (주말 및 공휴일 휴무)</p>
               </div>
               <div class="sub-container">
                 <p class="footer-subtitle">COMPANY</p>
                 <div class="footer-company">
                     <p>상호: 윤하다 &nbsp;&nbsp; 대표: 박채윤</p>
-                    <p>사업자등록번호: 809-81-01574</p>
+                    <p>사업자등록번호: 814-86-00820</p>
                     <p>이메일: yoonhada@gmail.com</p>
-                    <address>주소: 서울특별시 용산구 한강대로 372</address>
+                    <address>주소: 서울특별시 서초구 강남대로 343 The Founders Inc</address>
                 </div>
               </div>
           </div>
