기타 내용 수정

--- a/templates/pages/notice_detail.html
+++ b/templates/pages/notice_detail.html
@@ -29,7 +29,7 @@
                 </div>
                 <p class="post-content">{{ post_list.content }}</p>
             </div>
-        </div>
+        </div><br><br><br><br>
     </body>
 </html>
 {% endblock %}
